// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders with colors 1`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  display: inline-flex;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #fcc;
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #ff4747;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * 16px / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * 16px / 2) - (0 / 100 * calc(3.141592653589793 * 2 * 16px / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-red"
>
  <span
    class="emotion-1"
  >
    <svg
      class="emotion-2"
    >
      <circle
        class="emotion-3"
        cx="calc(16px / 2)"
        cy="calc(16px / 2)"
        fill="none"
        r="calc(16px / 2)"
        stroke-width="16px"
      />
    </svg>
  </span>
</div>
`;

exports[`Progress renders with colors 2`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  display: inline-flex;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ebebeb;
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #1f1f1f;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * 16px / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * 16px / 2) - (0 / 100 * calc(3.141592653589793 * 2 * 16px / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-gray"
>
  <span
    class="emotion-1"
  >
    <svg
      class="emotion-2"
    >
      <circle
        class="emotion-3"
        cx="calc(16px / 2)"
        cy="calc(16px / 2)"
        fill="none"
        r="calc(16px / 2)"
        stroke-width="16px"
      />
    </svg>
  </span>
</div>
`;

exports[`Progress renders with colors 3`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  display: inline-flex;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #321321;
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #123123;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * 16px / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * 16px / 2) - (0 / 100 * calc(3.141592653589793 * 2 * 16px / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress-custom"
>
  <span
    class="emotion-1"
  >
    <svg
      class="emotion-2"
    >
      <circle
        class="emotion-3"
        cx="calc(16px / 2)"
        cy="calc(16px / 2)"
        fill="none"
        r="calc(16px / 2)"
        stroke-width="16px"
      />
    </svg>
  </span>
</div>
`;

exports[`Progress renders with custom width 1`] = `
.emotion-0 {
  position: relative;
  width: 100px;
  height: 100px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  display: inline-flex;
}

.emotion-2 {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background-color: #ebebeb;
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #1e6fff;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * 100px / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * 100px / 2) - (50 / 100 * calc(3.141592653589793 * 2 * 100px / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress"
>
  <span
    class="emotion-1"
  >
    <svg
      class="emotion-2"
    >
      <circle
        class="emotion-3"
        cx="calc(100px / 2)"
        cy="calc(100px / 2)"
        fill="none"
        r="calc(100px / 2)"
        stroke-width="100px"
      />
    </svg>
  </span>
</div>
`;

exports[`Progress renders with error status 1`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  display: inline-flex;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ebebeb;
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #ff4747;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * 16px / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * 16px / 2) - (0 / 100 * calc(3.141592653589793 * 2 * 16px / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress"
>
  <span
    class="emotion-1"
  >
    <svg
      class="emotion-2"
    >
      <circle
        class="emotion-3"
        cx="calc(16px / 2)"
        cy="calc(16px / 2)"
        fill="none"
        r="calc(16px / 2)"
        stroke-width="16px"
      />
    </svg>
  </span>
</div>
`;

exports[`Progress renders with steps 1`] = `
.emotion-0 {
  position: relative;
  width: 16px;
  height: 16px;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  display: inline-flex;
}

.emotion-2 {
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #ebebeb;
}

.emotion-3 {
  -webkit-transition: all 200ms;
  transition: all 200ms;
  stroke: #1e6fff;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: center;
  stroke-dasharray: calc(3.141592653589793 * 2 * 16px / 2);
  stroke-dashoffset: calc(calc(3.141592653589793 * 2 * 16px / 2) - (0 / 100 * calc(3.141592653589793 * 2 * 16px / 2)));
}

<div
  class="emotion-0"
  data-testid="test-progress"
>
  <span
    class="emotion-1"
  >
    <svg
      class="emotion-2"
    >
      <circle
        class="emotion-3"
        cx="calc(16px / 2)"
        cy="calc(16px / 2)"
        fill="none"
        r="calc(16px / 2)"
        stroke-width="16px"
      />
    </svg>
  </span>
</div>
`;
